--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -1,4 +1,3 @@
 .content-grid {
-  @apply w-full h-full grid grid-cols-4 md:grid-cols-8 lg:grid-cols-12;
-  // gap-4  md:gap-6 lg:gap-8
+  @apply w-full h-full grid grid-cols-4 md:grid-cols-8 lg:grid-cols-12 gap-4 md:gap-6 lg:gap-8;
 }
