--- a/src/styles/_grid.scss
+++ b/src/styles/_grid.scss
@@ -1,3 +1,3 @@
 .content-grid {
-  @apply w-full h-full grid grid-cols-4 md:grid-cols-8 lg:grid-cols-12 gap-4 md:gap-6 lg:gap-8;
+  @apply w-full h-full grid grid-cols-4 lg:grid-rows-[auto_1fr] md:grid-cols-8 lg:grid-cols-12 gap-x-4 md:gap-x-6 lg:gap-0;
 }
