--- a/src/styles/_button.scss
+++ b/src/styles/_button.scss
@@ -1,20 +1,3 @@
-@layer utilities {
-  .button-xs {
-    @apply h-[30px] text-paragraph-04;
-  }
-
-  .button-sm {
-    @apply h-10 text-paragraph-02;
-  }
-
-  .button-md {
-    @apply h-[42px] text-subheading-02;
-  }
-
-  .button-lg {
-    @apply h-14 text-subheading-01;
-  }
-}
 
 .button-primary {
   @apply bg-primary-red-200  text-primary-grey-900 font-semibold transition-all ease-in-out;
@@ -30,3 +13,11 @@
     @apply bg-primary-red-300;
   }
 }
+
+.button-rounded {
+  @apply drop-shadow-lg bg-primary-red-200;
+  border-radius: 100% !important;
+  width: auto !important;
+  padding: 1rem !important;
+}
+
