--- a/src/styles/_input.scss
+++ b/src/styles/_input.scss
@@ -7,13 +7,13 @@
     @apply h-11 border border-primary-grey-300 py-3 px-5;
   }
 
-  input[type='number']::-webkit-inner-spin-button,
-  input[type='number']::-webkit-outer-spin-button {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
     margin: 0;
   }
 
-  input[type='number'] {
+  input[type="number"] {
     -moz-appearance: textfield;
   }
 }
