--- a/src/styles/_navLink.scss
+++ b/src/styles/_navLink.scss
@@ -1,10 +1,8 @@
 .nav-link {
   &.active {
-    @apply bg-others-transparency-red-100 text-primary-red-300 after:block rounded-[5px];
+    @apply rounded-[5px] bg-others-transparency-red-100 text-primary-red-300 after:block;
     & svg {
       @apply fill-primary-red-300;
     }
   }
-
-
 }
