--- a/src/styles/_custom.scss
+++ b/src/styles/_custom.scss
@@ -1,6 +1,6 @@
 .leftFadeIn {
   opacity: 0;
-  animation: FadeIn 1s cubic-bezier(.36, .07, .19, .97) both;
+  animation: FadeIn 1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
 }
 
 @keyframes FadeIn {
